# prompt-inject-fuzzer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.yaml  custom_payloads.yaml
src/prompt_inject_fuzzer/: __init__.py  cli.py  config.py  core.py  detectors.py
src/prompt_inject_fuzzer/engines/: __init__.py  anthropic.py  base.py  custom.py  openai.py
src/prompt_inject_fuzzer/mutators/: __init__.py  base.py  encoding.py  homoglyph.py  language.py  semantic.py  splitting.py
src/prompt_inject_fuzzer/payloads/: __init__.py  base.py  library.py  loader.py
tests/: test_core.py
